--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "bootstrap": "^5.3.0-alpha1"
+    "bootstrap": "^5.3.0-alpha1",
+    "express": "^4.18.2",
+    "mongodb": "^5.1.0",
+    "pug": "^3.0.2"
   }
 }
